--- a/OAuth2Client.js.html
+++ b/OAuth2Client.js.html
@@ -251,6 +251,32 @@ class OAuth2Client extends EventEmitter {
    * @param {object} args.headers
    * @returns {Promise&lt;*>}
    */
+  async patch({
+    path,
+    query,
+    json,
+    body,
+    headers,
+  }) {
+    return this._queueRequest({
+      method: 'PATCH',
+      path,
+      query,
+      json,
+      body,
+      headers,
+    });
+  }
+
+  /**
+   * @param {object} args
+   * @param {string} args.path
+   * @param {string} args.query
+   * @param {object} args.json
+   * @param {object} args.body
+   * @param {object} args.headers
+   * @returns {Promise&lt;*>}
+   */
   async put({
     path,
     query,
