deploy: 9df78e9f08f8b9c726aa92deb7cef998d8312bb5

--- a/OAuth2Client.js.html
+++ b/OAuth2Client.js.html
@@ -727,6 +727,7 @@ class OAuth2Client extends EventEmitter {
               if (error['error']) return error['error'];
               if (error['message']) return error['message'];
             }
+            return String(error);
           });
           if (errorStrings.length) throw new OAuth2Error(errorStrings.join(', '), response.status);
         }
