deploy: 0adda1407e24f9e3a93cd2aa234980f16077cf0f

--- a/index.html
+++ b/index.html
@@ -48,11 +48,14 @@
         <article class="main-page__content"><h1>Homey OAuth2</h1>
 <p>This module does the heavy lifting for a <a href="https://developer.athom.com">Homey App</a> that talks to any OAuth2 Web API.</p>
 <p>This module requires Homey Apps SDK v3.</p>
+<h2>Documentation</h2>
+<p>Read <a href="https://athombv.github.io/node-homey-oauth2app/">https://athombv.github.io/node-homey-oauth2app/</a></p>
 <h2>Related Modules</h2>
 <ul>
 <li><a href="https://github.com/athombv/node-homey-zwavedriver">node-homey-zwavedriver</a> — Module for Z-Wave drivers</li>
 <li><a href="https://github.com/athombv/node-homey-zigbeedriver">node-homey-zigbeedriver</a> — Module for Zigbee drivers</li>
 <li><a href="https://github.com/athombv/node-homey-oauth2app">node-homey-rfdriver</a> — Module for RF (433 Mhz, 868 MHz, Infrared) drivers</li>
+<li><a href="https://github.com/athombv/node-homey-log">node-homey-log</a> — Module to log unhandled errors to Sentry</li>
 </ul>
 <h2>Installation</h2>
 <pre class="prettyprint source"><code>$ npm install homey-oauth2app
