--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
     <section>
         <article class="main-page__content"><h1>Homey OAuth2</h1>
+<p><a href="https://www.npmjs.com/package/homey-oauth2app"><img src="https://img.shields.io/npm/v/homey-oauth2app" alt="npm"></a> <a href="https://github.com/athombv/node-homey-oauth2app/actions/workflows/lint.yml"><img src="https://github.com/athombv/node-homey-oauth2app/actions/workflows/lint.yml/badge.svg?branch=master" alt="Lint"></a> <a href="https://github.com/athombv/node-homey-oauth2app/actions/workflows/deploy.yml"><img src="https://github.com/athombv/node-homey-oauth2app/actions/workflows/deploy.yml/badge.svg" alt="NPM"></a> <a href="https://github.com/athombv/node-homey-oauth2app/actions/workflows/docs.yml"><img src="https://github.com/athombv/node-homey-oauth2app/actions/workflows/docs.yml/badge.svg?branch=master" alt="Deploy Documentation To GitHub Pages"></a></p>
 <p>This module does the heavy lifting for a <a href="https://developer.athom.com">Homey App</a> that talks to any OAuth2 Web API.</p>
 <p>This module requires Homey Apps SDK v3.</p>
 <h2>Documentation</h2>
