deploy: e1b6c92851dc9ee9fb2cee020b9cba766ed1cb61

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p>This module does the heavy lifting for a <a href="https://developer.athom.com">Homey App</a> that talks to any OAuth2 Web API.</p>
 <p>This module requires Homey Apps SDK v3.</p>
 <h2>Documentation</h2>
-<p>Read <a href="https://athombv.github.io/node-homey-oauth2app/">https://athombv.github.io/node-homey-oauth2app/</a></p>
+<p>Documentation is available at <a href="https://athombv.github.io/node-homey-oauth2app/">https://athombv.github.io/node-homey-oauth2app/</a>.</p>
 <h2>Related Modules</h2>
 <ul>
 <li><a href="https://github.com/athombv/node-homey-zwavedriver">node-homey-zwavedriver</a> — Module for Z-Wave drivers</li>
