deploy: 2d1b60cd9857e45b23c34f9d43d07ceb384b4ead

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 <p>Documentation is available at <a href="https://athombv.github.io/node-homey-oauth2app/">https://athombv.github.io/node-homey-oauth2app/</a>.</p>
 <h2>Related Modules</h2>
 <ul>
-<li><a href="https://github.com/athombv/node-homey-zwavedriver">node-homey-zwavedriver</a> — Module for Z-Wave drivers</li>
-<li><a href="https://github.com/athombv/node-homey-zigbeedriver">node-homey-zigbeedriver</a> — Module for Zigbee drivers</li>
-<li><a href="https://github.com/athombv/node-homey-oauth2app">node-homey-rfdriver</a> — Module for RF (433 Mhz, 868 MHz, Infrared) drivers</li>
-<li><a href="https://github.com/athombv/node-homey-log">node-homey-log</a> — Module to log unhandled errors to Sentry</li>
+<li><a href="https://athombv.github.io/node-homey-zwavedriver">node-homey-zwavedriver</a> — Module for Z-Wave drivers</li>
+<li><a href="https://athombv.github.io/node-homey-zigbeedriver">node-homey-zigbeedriver</a> — Module for Zigbee drivers</li>
+<li><a href="https://athombv.github.io/node-homey-oauth2app">node-homey-rfdriver</a> — Module for RF (433 Mhz, 868 MHz, Infrared) drivers</li>
+<li><a href="https://athombv.github.io/node-homey-log">node-homey-log</a> — Module to log unhandled errors to Sentry</li>
 </ul>
 <h2>Installation</h2>
 <pre class="prettyprint source"><code>$ npm install homey-oauth2app
