deploy: 15d26f15988cee7f36f99d443e0b6417bb9bd8f8

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 
 
     <section>
-        <article class="main-page__content"><h1>Homey OAuth2</h1>
+        <article class="main-page__content"><header>
+<h1>Homey OAuth2</h1>
 <p><a href="https://www.npmjs.com/package/homey-oauth2app"><img src="https://img.shields.io/npm/v/homey-oauth2app" alt="npm"></a> <a href="https://github.com/athombv/node-homey-oauth2app/actions/workflows/lint.yml"><img src="https://github.com/athombv/node-homey-oauth2app/actions/workflows/lint.yml/badge.svg?branch=master" alt="Lint"></a> <a href="https://github.com/athombv/node-homey-oauth2app/actions/workflows/deploy.yml"><img src="https://github.com/athombv/node-homey-oauth2app/actions/workflows/deploy.yml/badge.svg" alt="NPM"></a> <a href="https://github.com/athombv/node-homey-oauth2app/actions/workflows/docs.yml"><img src="https://github.com/athombv/node-homey-oauth2app/actions/workflows/docs.yml/badge.svg?branch=master" alt="Deploy Documentation To GitHub Pages"></a></p>
+</header>
 <p>This module does the heavy lifting for a <a href="https://developer.athom.com">Homey App</a> that talks to any OAuth2 Web API.</p>
 <p>This module requires Homey Apps SDK v3.</p>
 <h2>Documentation</h2>
@@ -213,8 +215,8 @@ module.exports = class MyBrandDevice extends OAuth2Device {
 <script src="scripts/highlight.min.js"></script>
 <!--<script src="scripts/linenumber.js"></script>-->
 
-<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+
+<script async defer src="https://sa.athom.com/latest.js"></script>
 
 </body>
 </html>
