deploy: bbdc869c4deecdb73cba7d332206f30b8977ec41

--- a/OAuth2App.js.html
+++ b/OAuth2App.js.html
@@ -145,8 +145,8 @@ class OAuth2App extends Homey.App {
     }
 
     if (this.constructor.OAUTH2_CLIENT.API_URL
-     &amp;&amp; this.constructor.OAUTH2_CLIENT.TOKEN_URL
-     &amp;&amp; this.constructor.OAUTH2_CLIENT.AUTHORIZATION_URL) {
+      &amp;&amp; this.constructor.OAUTH2_CLIENT.TOKEN_URL
+      &amp;&amp; this.constructor.OAUTH2_CLIENT.AUTHORIZATION_URL) {
       this.setOAuth2Config();
     }
 
@@ -212,12 +212,12 @@ class OAuth2App extends Homey.App {
     }
 
     if (!client
-     || (client !== OAuth2Client &amp;&amp; (client.prototype instanceof OAuth2Client) !== true)) {
+      || (client !== OAuth2Client &amp;&amp; (client.prototype instanceof OAuth2Client) !== true)) {
       throw new OAuth2Error('Invalid Client, must extend OAuth2Client');
     }
 
     if (!token
-     || (token !== OAuth2Token &amp;&amp; (token.prototype instanceof OAuth2Token) !== true)) {
+      || (token !== OAuth2Token &amp;&amp; (token.prototype instanceof OAuth2Token) !== true)) {
       throw new OAuth2Error('Invalid Token, must extend OAuth2Token');
     }
 
@@ -397,7 +397,7 @@ class OAuth2App extends Homey.App {
     const savedSessions = this.getSavedOAuth2Sessions();
     const savedSession = savedSessions[sessionId];
     if (savedSession
-     &amp;&amp; savedSession.configId === configId) {
+      &amp;&amp; savedSession.configId === configId) {
       delete savedSessions[sessionId];
       this.homey.settings.set(SETTINGS_KEY, savedSessions);
 
@@ -424,10 +424,8 @@ class OAuth2App extends Homey.App {
     // create a client from storage if available
     const savedSessions = this.getSavedOAuth2Sessions();
     if (savedSessions &amp;&amp; savedSessions[sessionId]) {
-      const {
-        token,
-        title,
-      } = savedSessions[sessionId];
+      let { token } = savedSessions[sessionId];
+      const { title } = savedSessions[sessionId];
 
       const {
         token: Token,
@@ -437,7 +435,10 @@ class OAuth2App extends Homey.App {
         sessionId,
         configId,
       });
-      client.setToken({ token: new Token(token) });
+
+      if (token) token = new Token(token);
+
+      client.setToken({ token });
       client.setTitle({ title });
 
       this.tryCleanSession({
@@ -465,7 +466,9 @@ class OAuth2App extends Homey.App {
     savedSessions[sessionId] = {
       configId,
       title,
-      token: token.toJSON(),
+      token: (token instanceof OAuth2Token)
+        ? token.toJSON()
+        : null,
     };
     this.homey.settings.set(SETTINGS_KEY, savedSessions);
   }
