--- a/OAuth2Client.js.html
+++ b/OAuth2Client.js.html
@@ -223,7 +223,7 @@ class OAuth2Client extends EventEmitter {
    * @description Helper function
    */
   destroy() {
-    this.onUninit().catch(() => {});
+    this.onUninit().catch(() => { });
     this.emit('destroy');
   }
 
@@ -724,6 +724,9 @@ class OAuth2Client extends EventEmitter {
       method: 'POST',
     });
     if (!response.ok) {
+      this._token = null;
+      this.emit('expired');
+      this.save();
       return this.onHandleRefreshTokenError({ response });
     }
 
