deploy: 11f89f6ca11c40d17f27fca796a70315b0c828d8

--- a/OAuth2Client.js.html
+++ b/OAuth2Client.js.html
@@ -103,7 +103,6 @@ const { EventEmitter } = require('events');
 const querystring = require('querystring');
 
 const fetch = require('node-fetch');
-const PromiseQueue = require('promise-queue');
 
 const OAuth2Error = require('./OAuth2Error');
 const OAuth2Token = require('./OAuth2Token');
@@ -172,7 +171,6 @@ class OAuth2Client extends EventEmitter {
     this._scopes = scopes;
 
     this._token = null;
-    this._pq = new PromiseQueue(1);
   }
 
   /*
@@ -243,7 +241,7 @@ class OAuth2Client extends EventEmitter {
     query,
     headers,
   }) {
-    return this._queueRequest({
+    return this._executeRequest({
       method: 'GET',
       path,
       query,
@@ -263,7 +261,7 @@ class OAuth2Client extends EventEmitter {
     query,
     headers,
   }) {
-    return this._queueRequest({
+    return this._executeRequest({
       method: 'delete',
       path,
       query,
@@ -287,7 +285,7 @@ class OAuth2Client extends EventEmitter {
     body,
     headers,
   }) {
-    return this._queueRequest({
+    return this._executeRequest({
       method: 'POST',
       path,
       query,
@@ -313,7 +311,7 @@ class OAuth2Client extends EventEmitter {
     body,
     headers,
   }) {
-    return this._queueRequest({
+    return this._executeRequest({
       method: 'PATCH',
       path,
       query,
@@ -339,7 +337,7 @@ class OAuth2Client extends EventEmitter {
     body,
     headers,
   }) {
-    return this._queueRequest({
+    return this._executeRequest({
       method: 'PUT',
       path,
       query,
@@ -371,16 +369,6 @@ class OAuth2Client extends EventEmitter {
     return undefined;
   }
 
-  /**
-   * @param req
-   * @returns {Promise&lt;*>}
-   * @private
-   */
-  async _queueRequest(req) {
-    return this._pq.add(() => {
-      return this._executeRequest({ req });
-    });
-  }
 
   /**
    * @param {object} args
@@ -389,14 +377,18 @@ class OAuth2Client extends EventEmitter {
    * @returns {Promise&lt;void|*>}
    * @private
    */
-  async _executeRequest({
+  async _executeRequest(
     req,
     didRefreshToken = false,
-  }) {
+  ) {
     const {
       url,
       opts,
     } = await this.onBuildRequest(req);
+
+    if (this._refreshingToken) {
+      await this._refreshingToken;
+    }
 
     // log request
     this.debug('[req]', opts.method, url);
@@ -868,10 +860,10 @@ class OAuth2Client extends EventEmitter {
           opts,
           response,
         });
-        return this._executeRequest({
+        return this._executeRequest(
           req,
-          didRefreshToken: true,
-        });
+          true,
+        );
       }
     }
 
