--- a/OAuth2Driver.js.html
+++ b/OAuth2Driver.js.html
@@ -147,11 +147,27 @@ class OAuth2Driver extends Homey.Driver {
   }
 
   /**
+   * @returns {Promise&lt;void>}
+   */
+  async onUninit() {
+    await this.onOAuth2Uninit();
+  }
+
+  /**
    * @description
    * > This method can be extended
    * @returns {Promise&lt;void>}
    */
   async onOAuth2Init() {
+    // Extend me
+  }
+
+  /**
+   * @description
+   * > This method can be extended
+   * @returns {Promise&lt;void>}
+   */
+  async onOAuth2Uninit() {
     // Extend me
   }
 
@@ -440,6 +456,19 @@ class OAuth2Driver extends Homey.Driver {
       }
     };
 
+    const onLogin = async ({ username, password }) => {
+      await client.getTokenByCredentials({ username, password });
+
+      await device.onOAuth2Uninit();
+      await device.setStoreValue('OAuth2SessionId', OAuth2SessionId);
+      await device.setStoreValue('OAuth2ConfigId', OAuth2ConfigId);
+      await client.save();
+      device.oAuth2Client = client;
+      await device.onOAuth2Init();
+
+      return true;
+    };
+
     const onShowView = async viewId => {
       if (viewId === 'login_oauth2') {
         await onShowViewLoginOAuth2();
@@ -452,6 +481,7 @@ class OAuth2Driver extends Homey.Driver {
 
     socket
       .setHandler('showView', onShowView)
+      .setHandler('login', onLogin)
       .setHandler('disconnect', onDisconnect);
   }
 
