deploy: dd026421839834e6f6f7dd23d74b05fcfd2802c0

--- a/OAuth2Client.js.html
+++ b/OAuth2Client.js.html
@@ -128,7 +128,7 @@ const { URLSearchParams } = require('url');
 const { EventEmitter } = require('events');
 const querystring = require('querystring');
 
-const fetch = require('./OAuth2Fetch');
+const fetch = require('node-fetch');
 
 const OAuth2Error = require('./OAuth2Error');
 const OAuth2Token = require('./OAuth2Token');
